<resources>
    <string name="app_name">Freshbean</string>
    <string name="shopTitle">FreshBean Coffee</string>
    <string name="shopSubtitle">Please choose your roast</string>
    <string name="purchaseButton">Purchase</string>
    <string name="ground">Ground</string>
    <string name="whole">Whole</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="totalSoFar">$ Total price</string>
    <string name="purchaseTitle">Your Purchases</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_purchase">Purchase</string>
    <string name="action_purchases">Purchases</string>
    <string name="action_beans">Products</string>


    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Buy coffee app</string>
    <string name="nav_header_subtitle">for more info visit coffeeireland.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_beans">Products</string>
    <string name="menu_purchases">Purchases</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
